# light-manager

./: CMakeLists.txt  LightManager.qmlproject  LightManager.qmlproject.qtds  qmlmodules
content/: App.qml  CMakeLists.txt  LampColumn.qml  Manager.ui.qml  ManagerMenu.qml  NewLampLabel.qml  RemoteLamp.qml
imports/: CMakeLists.txt
imports/LightManager/: CMakeLists.txt  qmldir
imports/LightManager/designer/: plugin.metainfo
src/: import_qml_plugins.h  lightclient.cpp  lightclient.h  main.cpp  manager.cpp  manager.h
